--- a/app/src/main/res/layout-sw600dp/recipe_item.xml
+++ b/app/src/main/res/layout-sw600dp/recipe_item.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@color/ligthGrey"
+        android:background="@color/lightGrey"
         android:contentDescription="@string/recipe_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
