--- a/app/src/main/res/layout/ingredient_item.xml
+++ b/app/src/main/res/layout/ingredient_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:background="@color/ligthGrey">
+    android:padding="4dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,16 +20,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="2"
-        android:paddingRight="4dp"
-        android:textSize="16sp"/>
+        android:paddingRight="6dp"
+        android:textSize="16sp"
+        android:textStyle="italic"/>
 
     <TextView
         android:id="@+id/measure_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="CUP"
-        android:paddingRight="4dp"
-        android:textSize="16sp"/>
+        android:paddingRight="6dp"
+        android:textSize="16sp"
+        android:textStyle="italic"/>
 
     <TextView
         android:id="@+id/ingredient_tv"
