--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -14,7 +14,7 @@
         android:contentDescription="@string/recipe_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/ligthGrey" />
+        android:background="@color/lightGrey" />
 
     <ImageView
         android:id="@+id/recipe_image"
