--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -4,4 +4,4 @@
     android:id="@+id/recipe_detail_fragment"
     android:name="com.example.android.bakingapp.RecipeDetailsFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="wrap_content"/>
