--- a/app/src/main/res/layout/fragment_step_detail.xml
+++ b/app/src/main/res/layout/fragment_step_detail.xml
@@ -12,14 +12,13 @@
         android:id="@+id/playerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="0dp"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toTopOf="@+id/horizontalHalf"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        android:background="@drawable/cooking"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/horizontalHalf"
@@ -41,55 +40,64 @@
 
     <TextView
         android:id="@+id/step_description_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
-        android:text="hfhgfghgfhhggh"
+
+
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="36dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/horizontalHalf"
         tools:text="1. Preheat the oven to 350\u00b0F. Butter a 9\'' deep dish pie pan." />
 
     <Button
         android:id="@+id/button_previous"
+        android:text="@string/button_label_previous"
         android:layout_width="110dp"
         android:layout_height="wrap_content"
+
+
         android:layout_marginBottom="16dp"
+
         android:layout_marginEnd="16dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginRight="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/button_label_previous"
+
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/verticalHalf"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/step_description_tv"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/step_description_tv" />
 
     <Button
         android:id="@+id/button_next"
+        android:text="@string/button_label_next"
         android:layout_width="110dp"
         android:layout_height="wrap_content"
+
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
+
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/button_label_next"
+        android:layout_marginLeft="16dp"
+
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+
+
+        app:layout_constraintTop_toBottomOf="@+id/step_description_tv"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+
         app:layout_constraintStart_toStartOf="@+id/verticalHalf"
-        app:layout_constraintTop_toBottomOf="@+id/step_description_tv"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintHorizontal_bias="0.0" />
 
 
 </android.support.constraint.ConstraintLayout>
