--- a/app/src/main/res/layout/fragment_step_detail_linear.xml
+++ b/app/src/main/res/layout/fragment_step_detail_linear.xml
@@ -1,71 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.example.android.bakingapp.StepDetailActivity"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="81dp">
 
-    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
-        android:id="@+id/playerView"
-        android:layout_width="match_parent"
-        android:layout_height="191dp"
 
-        android:layout_weight="3" />
 
-    <TextView
-        android:id="@+id/step_description_tv"
+    <android.support.constraint.Guideline
+        android:id="@+id/verticalHalf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="256dp" />
 
-
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="36dp"
-        android:textSize="20sp"
-
-        tools:text="1. Preheat the oven to 350\u00b0F. Butter a 9\'' deep dish pie pan."
-        android:layout_weight="2"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/button_previous"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="1">
-
-        <Button
-            android:id="@+id/button_previous"
-            android:text="@string/button_label_previous"
-            android:layout_width="110dp"
-            android:layout_height="wrap_content"
 
 
-            android:layout_marginBottom="16dp"
+        android:layout_marginBottom="16dp"
 
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/button_label_previous"
 
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/verticalHalf"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
 
-            />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        android:gravity="bottom"/>
 
-        <Button
-            android:id="@+id/button_next"
-            android:text="@string/button_label_next"
-            android:layout_width="110dp"
-            android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/button_next"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
 
-            android:layout_marginBottom="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="8dp"
 
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/button_label_next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
 
-            android:layout_marginRight="16dp"
-            android:layout_marginEnd="16dp"
+        app:layout_constraintStart_toStartOf="@+id/verticalHalf"
 
-            />
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
-</LinearLayout>
+
+
+</android.support.constraint.ConstraintLayout>
