Fixed OnePain mode

--- a/app/src/main/res/layout/step_detail_activity.xml
+++ b/app/src/main/res/layout/step_detail_activity.xml
@@ -1,7 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--
 <fragment
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/step_detail_fragment"
     android:name="com.example.android.bakingapp.StepDetailFragment"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content" />
+-->
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.android.bakingapp.StepDetailActivity">
+
+    <LinearLayout
+        android:id="@+id/android_me_linear_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="16dp">
+
+
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/step_detail_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+</ScrollView>
