--- a/app/src/main/res/layout/recipe_widget_provider.xml
+++ b/app/src/main/res/layout/recipe_widget_provider.xml
@@ -25,7 +25,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/appwidget_recipe_name"
-        />
+        android:listSelector="@android:color/transparent"/>
+
+    <ImageView
+        android:id="@+id/empty_view"
+        android:scaleType="centerCrop"
+        android:alpha="0.2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/no_recipe"/>
+
+
 
 
 </RelativeLayout>
