--- a/app/src/main/res/xml/recipe_widget_provider_info.xml
+++ b/app/src/main/res/xml/recipe_widget_provider_info.xml
@@ -6,5 +6,7 @@
     android:minWidth="250dp"
     android:previewImage="@drawable/ic_recipe"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="86400000"
+
     android:widgetCategory="home_screen"></appwidget-provider>
+
+<!--android:updatePeriodMillis="86400000"-->
